--- a/src/styles/SignUp.css
+++ b/src/styles/SignUp.css
@@ -1,6 +1,6 @@
 .SignUp__form-wrapper {
   background-color: white;
-  border: 1px solid #dbdbdb;
+  border: 2px double black;
   margin-top: 10vh;
   padding: 30px;
   text-align: center;
