--- a/src/styles/CommentBox.css
+++ b/src/styles/CommentBox.css
@@ -1,9 +1,16 @@
 .CommentBox__root {
-  width: 100%;
+  width: 140%;
+  height: 14%;
+display: block;
+position: relative;
+text-align: center;
+margin: auto;
 }
 
 .CommentBox__input {
-  width: 100%;
-  margin: 0;
+  padding-bottom: 60px;
+  width: 180%;
+  margin-bottom: 60px;
+  margin-left: -180px;
   border: none !important;
 }
