--- a/src/styles/DiscoverPanel.css
+++ b/src/styles/DiscoverPanel.css
@@ -1,8 +1,8 @@
 .DiscoverPanel__root {
   width: 100%;
   max-width: 600px;
-  border: 1px solid #efefef;
-  background-color: #fff;
+  border: 1px solid black;
+  background-color: #333;
   border-radius: 2px;
   box-shadow: 0 1px 4px rgba(0,0,0,.04);
   margin: 40px auto;
