--- a/src/styles/LikeButton.css
+++ b/src/styles/LikeButton.css
@@ -1,11 +1,15 @@
 .LikeButton__root {
   border: none;
   outline: none;
-  font-size: 22px;
-  padding: 0;
-  margin: 0;
+  font-size: 26px;
+  padding: 10;
+  margin-top: 90px;
+  color: rgb(0, 176, 41);
+  margin-left: 100px;
 }
 
 .LikeButton__icon--liked {
-  color: #ED4956;
+  color: rgb(0, 176, 41);
+
+
 }
