--- a/src/styles/NewPostBoard.css
+++ b/src/styles/NewPostBoard.css
@@ -3,7 +3,9 @@
   height: 100%;
   background-size: cover;
   background-position: center center;
+  background-color: black;
 }
+
 
 .NewPostBoard__preview-filter {
   width: 100%;
@@ -13,14 +15,17 @@
 }
 
 .NewPostBoard__dropzone-row {
-  display: flex;
-  justify-content: space-between;
+  display: inline-flex;
+  margin-left: 15%;
+  background-color: black;
+
 }
 
 .NewPostBoard__tab-panel {
-  width: 600px;
+  width: 300px;
   height: 300px;
   margin: auto;
+  background-color: black;
 }
 
 .NewPostBoard__dropzone {
@@ -29,26 +34,32 @@
   border: 2px dashed rgb(102, 102, 102);
   border-radius: 5px;
   margin: auto;
+  background-color: black;
 }
 
 .NewPostBoard__edit-preview {
-  width: 300px;
-  height: 300px;
+  width: 200px;
+  height: 200px;
   border: 2px solid rgb(102, 102, 102);
   border-radius: 5px;
   margin: auto;
+  background-color: black;
 }
 
 .NewPostBoard__next-button,
 .NewPostBoard__back-button,
 .NewPostBoard__share-button {
-  border-radius: 20px;
+  border-radius: 10px;
+  color: rgb(0, 176, 41);
+  border-style: double;
+  border-width: thick;
+  border-color: white;
 }
 
 .NewPostBoard__share-button,
 .NewPostBoard__share-button:hover,
 .NewPostBoard__share-button:active {
-  background-color: rgb(76, 104, 215);
+  background-color: rgb(0, 176, 41);
   color: white;
 }
 
@@ -62,7 +73,7 @@
   width: 50%;
   border: none;
   border-radius: 0;
-  background-color: #efefef;
+  background-color: #333;
   color: #999;
 }
 
@@ -73,7 +84,7 @@
 .NewPostBoard__tab.NewPostBoard__tab--active {
   background-color: white;
   color: #262626;
-  border-bottom: 2px solid yellowgreen;
+  border-bottom: 3px solid rgb(0, 176, 41);
 }
 
 .NewPostBoard__filters {
@@ -89,7 +100,7 @@
 }
 
 .NewPostBoard__slider-label {
-  color: #555;
+  color:rgb(0, 176, 41);
   font-size: 14px;
 }
 
@@ -102,6 +113,7 @@
   width: 100%;
   height: 100%;
   cursor: pointer;
+  background-color: #333;
 }
 
 .NewPostBoard__dropzone-inner-content {
@@ -110,6 +122,8 @@
   left: 50%;
   transform: translate(-50%, -50%);
   text-align: center;
+  background-color: silver;
+
 }
 
 .NewPostBoard__dropzone-icon {
