--- a/src/styles/NewPostButton.css
+++ b/src/styles/NewPostButton.css
@@ -12,16 +12,16 @@
   border: none;
   font-weight: 300;
   box-shadow: 0 1px 1.5px 0 rgba(0,0,0,.12),0 1px 1px 0 rgba(0,0,0,.24);
-  color: white;
+  color:black;
   background:
-  radial-gradient(circle farthest-corner at 35% 90%, #fec564, transparent 50%),
-  radial-gradient(circle farthest-corner at 0 140%, #fec564, transparent 50%),
-  radial-gradient(ellipse farthest-corner at 0 -25%, #5258cf, transparent 50%),
-  radial-gradient(ellipse farthest-corner at 20% -50%, #5258cf, transparent 50%),
-  radial-gradient(ellipse farthest-corner at 100% 0, #893dc2, transparent 50%),
-  radial-gradient(ellipse farthest-corner at 60% -20%, #893dc2, transparent 50%),
-  radial-gradient(ellipse farthest-corner at 100% 100%, #d9317a, transparent),
-  linear-gradient(#6559ca, #bc318f 30%, #e33f5f 50%, #f77638 70%, #fec66d 100%);
+  radial-gradient(circle farthest-corner at 35% 90%, lightgreen, transparent 50%),
+  radial-gradient(circle farthest-corner at 0 140%, rgb(0, 176, 41), transparent 50%),
+  radial-gradient(ellipse farthest-corner at 0 -25%, green, transparent 50%),
+  radial-gradient(ellipse farthest-corner at 20% -50%, lightgreen, transparent 50%),
+  radial-gradient(ellipse farthest-corner at 100% 0, lightgreen, transparent 50%),
+  radial-gradient(ellipse farthest-corner at 60% -20%, lightgreen, transparent 50%),
+  radial-gradient(ellipse farthest-corner at 100% 100%, rgb(0, 176, 41), transparent),
+  linear-gradient(rgb(0, 176, 41), rgb(0, 176, 41) 30%, rgb(0, 176, 41) 50%, rgb(0, 176, 41)70%, rgb(0, 176, 41) 100%);
 }
 
 .NewPostButton__root:hover {
