--- a/src/styles/Profile.css
+++ b/src/styles/Profile.css
@@ -6,26 +6,31 @@
 .Profile__avatar-img-wrapper {
   width: 150px;
   height: 150px;
-  margin: 0 auto;
+  margin: 90 10px;
   text-align: center;
-  border: 1px solid #dbdbdb;
+  border: 1px solid rgb(0, 176, 41);
   border-radius: 50%;
+
 }
 
 .Profile__user-info-container {
-  padding: 40px 0;
+  padding: 40px 10px;
+  display:inline-flex;
+
+
 }
 
 .Profile__avatar-img {
   display: inline-block;
   width: 100%;
   height: 100%;
-  border-radius: 50%;
+  border-radius: 20%;
 }
 
 .Profile__username {
   display: inline-block;
-  margin-right: 10px;
+  color: rgb(0, 176, 41);
+  margin-right: 9px;
   font-family: 'Pacifico', cursive;
 }
 
@@ -33,6 +38,7 @@
   padding: 0.3em 1.2em;
   line-height: 1;
   vertical-align: middle;
+  background-color: silver;
 }
 
 .Profile__menu-button {
@@ -45,21 +51,23 @@
   border: none;
   outline: none;
   margin-left: 10px;
-  color: #999;
+  color: rgb(0, 176, 41);
 }
 
 .Profile__edit-button a {
   display: inline-block;
   width: 100%;
-  color: #999;
+  color: black;
   font-size: 14px;
   text-decoration: none;
   text-transform: none;
   letter-spacing: .1px;
+
+
 }
 
 .Profile__edit-button a:hover {
-  color: #999;
+  color: rgb(0, 176, 41);
 }
 
 .Profile__photo-gallery {
@@ -76,10 +84,11 @@
 }
 
 .Profile__stats-item {
-  color: #262626;
-  display: inline-block;
-  margin-right: 40px;
-  font-size: 17px;
+  color: rgb(0, 176, 41);
+  display: inline;
+  margin-right: 28px;
+  font-size: 18px;
+  float:right;
 }
 
 .Profile__stats-item--link {
