--- a/src/styles/UsersModal.css
+++ b/src/styles/UsersModal.css
@@ -25,7 +25,7 @@
   width: 30px;
   height: 30px;
   margin-right: 15px;
-  border: 1px solid #dbdbdb;
+  border: 1px solid rgb(0, 176, 41);
   border-radius: 50%;
 }
 
@@ -38,7 +38,7 @@
 
 .UsersModal__username {
   text-decoration: none;
-  color: #262626;
+  color: red;
 }
 
 .UsersModal__follow-button-wrapper {
