--- a/src/styles/index.css
+++ b/src/styles/index.css
@@ -2,9 +2,12 @@ body {
   margin: 0;
   padding: 0;
   font-family: 'Open Sans', sans-serif;
+  background-color: black;
 }
 
 /* disable scroll when modal is open */
 .ReactModal__Body--open {
     overflow: hidden;
+  
+
 }
