--- a/src/styles/DiscoverPanel.css
+++ b/src/styles/DiscoverPanel.css
@@ -2,7 +2,7 @@
   width: 100%;
   max-width: 600px;
   border: 1px solid black;
-  background-color: #333;
+  background-color: silver;
   border-radius: 2px;
   box-shadow: 0 1px 4px rgba(0,0,0,.04);
   margin: 40px auto;
@@ -10,11 +10,12 @@
 
 .DiscoverPanel__header {
   padding: 15px;
+  text-align: center;
 }
 
 .DiscoverPanel__heading {
   font-size: 14px;
-  color: #999;
+  color: #333;
   font-weight: 600;
   text-transform: uppercase;
   letter-spacing: 0.2px;
