--- a/src/styles/PostModal.css
+++ b/src/styles/PostModal.css
@@ -16,7 +16,7 @@
   line-height: 1;
   font-size: 45px;
   height: inherit;
-  color: white;
+  color: rgb(0, 176, 41);
   background-color: transparent;
   border: none;
   z-index: 5;
